labs/21/final/app-ingress-prod-redirect.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-redirect
  labels:
    app: northwindstore
    component: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: http://www.northwindstore.local/$1
spec:
  ingressClassName: nginx
  rules:
    - host: northwindstore.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
            path: /(.*)
